@@ -1,5 +1,5 @@
 /* makeinfo -- convert Texinfo source into other formats.
-   $Id: makeinfo.c,v 1.64 2004-07-19 19:35:47 dirt Exp $
+   $Id: makeinfo.c,v 1.65 2004-07-27 00:06:31 karl Exp $
 
    Copyright (C) 1987, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999,
    2000, 2001, 2002, 2003, 2004 Free Software Foundation, Inc.
@@ -1359,7 +1359,7 @@ convert_from_file (char *name)
       strcpy (filename, name);
       strcat (filename, suffixes[i]);
 
-      if (find_and_load (filename))
+      if (find_and_load (filename, 1))
         break;
 
       if (!suffixes[i][0] && strrchr (filename, '.'))
